...
    try {
      final uri = Uri.parse('${config.apiUrl}/sdk/public/payments/intents');
      final body = jsonEncode({
        'tokenShortcode': config.shortcode,
        'usdAmount': usdAmount,
        'metadata': {
          'account_id': accountId,
          'script_id': scriptId,
        },
      });

      final response = await effectiveClient
          .post(
...
